# DarkFTP

./: .gitignore  CMakeLists.txt  DarkFTP_en_SE.ts  LICENSE  README.md  connection.h  connectiondialog.cpp  connectiondialog.h  ftpmanager.cpp  ftpmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc  qml_main.cpp  serverfileitem.h  sftpmanager.cpp  sftpmanager.h
images/: README.txt
qml/: ConnectionDialog.qml  FileListView.qml  GlassmorphismStyle.qml  NavigationBar.qml  README.md  StatusBar.qml  ThemeManager.qml  TransferPanel.qml  main.qml  qmldir
src/: filemodel.cpp  filemodel.h
src/app/: MainWindow.cpp  MainWindow.h  connection.h
